// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEST DAY IN CALENDAR Should render not selected day 1`] = `
<td
  class="cell"
  data-testid="day-in-calendar"
>
  <div
    class="contentWrapper  "
  >
    <span
      class="number gray"
    >
      1
    </span>
  </div>
</td>
`;

exports[`TEST DAY IN CALENDAR Should set calendarDate after click 1`] = `
<td
  class="cell"
  data-testid="day-in-calendar"
>
  <div
    class="contentWrapper selected gray "
  >
    <span
      class="number gray"
    >
      1
    </span>
  </div>
</td>
`;
